--- a/e-commerce.html
+++ b/e-commerce.html
@@ -34,6 +34,7 @@
         <h3></h3>
         <h4></h4>
         <table id='output'></table>
+        <h5 id="total"></h5>
         <p id="checkout"></p>
         <p id="timer"></p>
         <p id="bayar"></p>
@@ -68,6 +69,94 @@
         });
         document.getElementsByTagName('tbody')[0].innerHTML=output
     }
+    const totalharga=()=>{
+        var output=0
+        cart.forEach((val)=>{
+            output+=val.harga
+        })
+        return output
+    }
+    const CartCheck=()=>{
+        if(cart.length){
+            var output=`  <table>
+                            <thead>
+                                <tr>
+                                    <td>No</td>
+                                    <td>Nama</td>
+                                    <td>Harga</td>
+                                    <td>Gambar</td>
+                                    <td>Action</td>
+                                </tr>
+                            </thead>
+                            <tbody id='isicart'>
+
+                            </tbody>
+                        </table>`
+            document.getElementById('checkout').innerHTML=output
+            var cartdata=cart.map((val,index)=>{
+                return(
+                    `<tr>
+                        <td>${index+1}</td>
+                        <td>${val.nama}</td>
+                        <td>${val.harga}</td>
+                        <td><img src = ${val.gambar} height="120px" width="110px"/></td>  
+                        <td><button onclick="OndelelteCartClick(${index})">Delete cart</button></td>
+                    </tr>`
+                )
+            })
+            console.log(cartdata)
+            document.getElementById('isicart').innerHTML=cartdata.join('')
+            document.getElementById('total').innerHTML=`kamu beli ${cart.length} item dengan harga Rp.${totalharga()}`
+            document.getElementById('timer').innerHTML=`<button onclick="onCheckOutClick()">Checkout</button>`
+        }else{
+            document.getElementById('checkout').innerHTML=`<h1>Cart kosong</h1>`
+            document.getElementById('total').innerHTML=``
+            document.getElementById('timer').innerHTML=``
+            document.getElementById('bayar').innerHTML=``
+        }
+    }
     Printdata(listProduk)
+    CartCheck()
+    const btnAddChart=(indexadd)=>{
+        cart.push(listProduk[indexadd])
+        CartCheck()
+    }
+    const OndelelteCartClick=(indexdelete)=>{
+        cart.splice(indexdelete,1)
+        CartCheck()
+    }
+    var timer
+    var time=10
+    const onCheckOutClick=()=>{
+        document.getElementById('bayar').innerHTML=`<input type='number' placeholder='masukkan uang' id='bayarcart'/> &nbsp; <button onclick="bayaronclick()">Bayar</button>`
+        timer=setInterval(()=>{
+            document.getElementById('timer').innerHTML=`${time} detik`
+            time--
+            if(time==-2){
+                cart=[]
+                time=10
+                clearInterval(timer)
+                CartCheck()
+            }
+        },1000)
+    }
+    const bayaronclick=()=>{
+        var userinput=parseInt(document.getElementById('bayarcart').value)
+        if(userinput<totalharga()){
+            alert('kurang duitnya bor Rp. '+(totalharga()-userinput))
+        }else if(userinput==totalharga()){
+            alert('terima kasih')
+            cart=[]
+            clearInterval(timer)
+            time=10
+            CartCheck()
+        }else{
+            alert('lebih duitnya bor Rp. '+(userinput-totalharga()))
+            cart=[]
+            clearInterval(timer)
+            time=10
+            CartCheck()
+        }
+    }
 </script>
 </html>
